feater: new huk and section

--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Poletaem22 - компания, предлагающая полеты над Барнаулом на самолете и вертолете, фотосессии с воздуха и услуги по перегонке самолетов по России."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta name="keywords" content="полеты Барнаул, авиационные услуги Барнаул, полеты на самолете, полеты на вертолете, фотосессии с воздуха, перегонка самолетов, авиация Барнаул, воздушные прогулки Барнаул" />
+    <meta name="author" content="Poletaem22" />
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="language" content="Russian" />
+    <meta name="geo.region" content="RU-ALT" />
+    <meta name="geo.placename" content="Барнаул" />
+    <meta name="geo.position" content="53.356541;83.787129" />
+    <meta name="ICBM" content="53.356541, 83.787129" />
+    <meta property="og:title" content="Poletaem22 - Полеты над Барнаулом на самолете и вертолете" />
+    <meta property="og:description" content="Poletaem22 предлагает уникальные воздушные прогулки, фотосессии и услуги по перегонке самолетов по России. Закажите полет над Барнаулом прямо сейчас!" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
+    <meta property="og:url" content="https://www.poletaem22.ru" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Poletaem22 - Полеты над Барнаулом на самолете и вертолете" />
+    <meta name="twitter:description" content="Poletaem22 предлагает уникальные воздушные прогулки, фотосессии и услуги по перегонке самолетов по России. Закажите полет над Барнаулом прямо сейчас!" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Poletaem22 - Полеты над Барнаулом на самолете и вертолете</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
