feater: new huk and sections

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Poletaem22 - компания, предлагающая полеты над Барнаулом на самолете и вертолете, фотосессии с воздуха и услуги по перегонке самолетов по России."
     />
     <meta name="keywords" content="полеты Барнаул, авиационные услуги Барнаул, полеты на самолете, полеты на вертолете, фотосессии с воздуха, перегонка самолетов, авиация Барнаул, воздушные прогулки Барнаул" />
-    <meta name="author" content="Poletaem22" />
+    <meta name="karmanov" content="Poletaem22" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="7 days" />
     <meta name="language" content="Russian" />
